@@ -487,13 +487,6 @@
       handler="karl.handlers.add_no_cache_headers"
       />
 
-  <adapter
-      for="karl.models.interfaces.ISite
-           repoze.bfg.interfaces.IRequest"
-      provides="karl.views.interfaces.IToolAddables"
-      factory=".adapters.SiteToolAddables"
-     />
-
   <view
     for="karl.models.interfaces.IIntranet"
     view=".retail.retail_view"
